# GrapichsEngine

./: CMakeLists.txt  GrapichsEngine.sln  GrapichsEngine.vcxproj
docs/: build.sh
include/core/: Application.h  Input.h  Window.h
include/renderer/: Grid.h  GridDrawer.h  Renderer.h  Shader.h
shaders/: core_shader.frag  core_vertex_shader.glsl
src/: GrapichsEngine.cpp
src/core/: Application.cpp  Window.cpp
src/renderer/: Grid.cpp  GridDrawer.cpp  Renderer.cpp  Shader.cpp
